@@ -82,7 +82,7 @@ public final class NormalizeSimpleTableFilter extends AbstractXMLFilter {
             }
             return s.y > 1 ? new Span(s.x, s.y - 1) : null;
           })
-          .collect(Collectors.toList());
+          .toList();
         tableState.currentRow = new ArrayList<>(fromPrew);
       } else {
         tableState.currentRow = new ArrayList<>();
